exmaple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://$host/node/auth
    nginx.ingress.kubernetes.io/auth-signin: http://$host/node
    nginx.ingress.kubernetes.io/auth-response-headers: Cookie
spec:
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /node(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: node-app-service
                port:
                  number: 3000
          - path: /kafdrop
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /testapp
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 80
