ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app
            port:
              number: 80
      - path: /kafdrop
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: node-app-service
            port:
              number: 80
