mulit-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: http://$host/node/auth
    nginx.ingress.kubernetes.io/auth-signin: http://$host/node
    nginx.ingress.kubernetes.io/auth-response-headers: Cookie
spec:
  ingressClassName: "nginx"
  rules:
  - host: hello-world.example2
    http:
      paths:
      - path: /kafdrop
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
  - host: hello-world.example2
    http:
      paths:
      - pathType: Prefix
        path: /testapp
        backend:
          service:
            name: test-app
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.example2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.example2
    http:
      paths:
      - path: /node(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-app-service
            port:
              number: 3000
